<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.quizapp.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textColor="@color/headerColor"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textHeader"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15sp"
            android:layout_marginTop="10sp"
            android:text="@string/description"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewFirstQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_question"
                android:textColor="@color/questionColor"
                android:textSize="@dimen/question_text_size"
                android:layout_marginBottom="15dp"/>

            <EditText
                android:id="@+id/answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint"
                android:textSize="14sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/headerColor"
                android:layout_margin="15dp"
                />

            <TextView
                android:id="@+id/textViewSecondQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/second_question"
                android:textColor="@color/questionColor"
                android:textSize="@dimen/question_text_size"
                android:layout_marginBottom="15dp"/>
            <EditText
                android:id="@+id/answer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint"
                android:textSize="14sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/headerColor"
                android:layout_margin="15dp"
                />

            <TextView
                android:id="@+id/textViewThirdQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/third_question"
                android:textColor="@color/questionColor"
                android:textSize="@dimen/question_text_size"
                android:layout_marginBottom="15dp"
                />
            <RadioGroup
                android:id="@+id/answer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <RadioButton
                    android:id="@+id/answer3_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option1_third_question"/>
                <RadioButton
                    android:id="@+id/answer3_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option2_third_question"/>
                <RadioButton
                    android:id="@+id/answer3_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option3_third_question"/>
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/headerColor"
                android:layout_margin="15dp"
                />

            <TextView
                android:id="@+id/textViewFourthQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fourth_question"
                android:textColor="@color/questionColor"
                android:textSize="@dimen/question_text_size"
                android:layout_marginBottom="15dp"
                />

            <CheckBox
                android:id="@+id/checkbox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option1_fourth_question"/>
            <CheckBox
                android:id="@+id/checkbox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option2_fourth_question"/>
            <CheckBox
                android:id="@+id/checkbox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option3_fourth_question"/>
            <CheckBox
                android:id="@+id/checkbox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option4_fourth_question"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/headerColor"
                android:layout_margin="15sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fifth_question"
                android:textColor="@color/questionColor"
                android:textSize="@dimen/question_text_size"
                android:layout_marginBottom="15dp"
                />
            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option1_fifth_question"/>
                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option2_fifth_question"/>
                <RadioButton
                    android:id="@+id/radio3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option3_fifth_question"/>
            </RadioGroup>
            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submitButton"
                android:onClick="submitAnswer"
                android:layout_gravity="center"/>
        </LinearLayout>
</RelativeLayout>
</ScrollView>
